--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash.debounce": "^4.0.8",
     "monaco-editor": "^0.9.0",
     "normalize.css": "^7.0.0",
+    "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.3.1",
     "typescript": "^2.4.2",
