--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-clean-css": "^3.7.0",
     "gulp-less": "^3.3.2",
     "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
     "lodash.debounce": "^4.0.8",
     "monaco-editor": "^0.9.0",
