--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.2",
     "add": "^2.0.6",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "del": "^3.0.0",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^7.0.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-less": "^3.3.2",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
     "live-server": "^1.2.0",
     "lodash.debounce": "^4.0.8",
     "monaco-editor": "^0.10.0",
@@ -21,6 +25,7 @@
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.3.1",
     "typescript": "^2.4.2",
+    "uglify-js": "^3.0.28",
     "webpack": "^3.3.0",
     "webpack-stream": "^3.2.0"
   },
