--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "gulp-uglify": "^3.0.0",
     "live-server": "^1.2.0",
     "lodash.debounce": "^4.0.8",
-    "monaco-editor": "^0.13.1",
+    "monaco-editor": "^0.14.3",
+    "monaco-typescript": "^3.2.0",
     "normalize.css": "^8.0.0",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^4.4.0",
-    "typescript": "^2.4.2",
+    "ts-loader": "^5.0.0",
+    "typescript": "^3.0.1",
     "uglify-js": "^3.4.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.11.1",
-    "webpack-stream": "^4.0.3"
+    "webpack-stream": "^5.1.1"
   },
   "scripts": {
     "build": "NODE_ENV=production && node_modules/.bin/gulp build",
