--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "add": "^2.0.6",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "del": "^3.0.0",
+    "del": "^4.1.1",
     "gulp": "^4.0.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean-css": "^3.7.0",
-    "gulp-less": "^3.3.2",
-    "gulp-preprocess": "^2.0.0",
+    "gulp-babel": "7.0.1",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-less": "^4.0.1",
+    "gulp-preprocess": "^3.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "live-server": "^1.2.0",
     "lodash.debounce": "^4.0.8",
-    "monaco-editor": "^0.14.3",
+    "monaco-editor": "^0.17.0",
     "monaco-typescript": "^3.2.0",
     "normalize.css": "^8.0.0",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^3.0.0",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^5.0.0",
+    "ts-loader": "^6.0.2",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.11.1",
     "webpack-stream": "^5.1.1"
   },
