Update TypeScript to 3.7.5

--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "TypeScript Playground",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@types/lodash.debounce": "^4.0.2",
     "add": "^2.0.6",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "del": "^4.1.1",
+    "del": "^5.1.0",
     "gulp": "^4.0.0",
-    "gulp-babel": "7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-less": "^4.0.1",
     "gulp-preprocess": "^3.0.2",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "live-server": "^1.2.0",
     "lodash.debounce": "^4.0.8",
-    "monaco-editor": "^0.17.0",
+    "monaco-editor": "^0.20.0",
     "monaco-typescript": "^3.2.0",
     "normalize.css": "^8.0.0",
-    "raw-loader": "^3.0.0",
+    "raw-loader": "^4.0.1",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^6.0.2",
+    "ts-loader": "^7.0.4",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
